--- a/css/_global.scss
+++ b/css/_global.scss
@@ -11,8 +11,13 @@ html {
     height: 100%;
 }
 body {
-    background-color: black;
     text-align: center;
+}
+.body-black {
+    background-color: black;
+}
+.body-whitesmoke {
+    background-color: whitesmoke;
 }
 .relative {
     position: relative;
