--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,7 @@ body {
 
 .body-black {
   background-color: black;
+  z-index: -20;
 }
 
 .body-whitesmoke {
@@ -235,7 +236,7 @@ body {
   display: block;
   width: 100vw;
   height: 100vh;
-  z-index: -10;
+  z-index: -5;
   filter: brightness(40%);
 }
 
@@ -679,7 +680,7 @@ body {
     display: none;
   }
   #header-landscape {
-    background-color: rgba(0, 0, 0, 0.25);
+    background-color: rgba(0, 0, 0, 0.35);
     border-bottom: 0;
     display: flex;
     justify-content: center;
@@ -724,6 +725,10 @@ body {
     background-color: black;
     color: rgb(255, 140, 0);
     transition-duration: 0.6s;
+  }
+  .background {
+    background-position-y: 80%;
+    filter: brightness(30%);
   }
   #first-section {
     align-items: center;
@@ -869,6 +874,9 @@ body {
   }
   #second-section #footer {
     top: 142vh;
+  }
+  #section-menu #full-menu {
+    margin-top: 0;
   }
   #footer {
     position: absolute;
